# WhyCivilResistanceWorks

./: README.md  WhyCivilResistanceWorks_gaganis_8200234.ipynb  pyproject.toml
data/: NAVCO_data.csv  NAVCO_data.tab  polity_data.csv
why_civil_resistance_works/: WhyCivilResistanceWorks_gaganis_8200234.ipynb
