[tool.poetry]
name = "why-civil-resistance-works"
version = "0.1.0"
description = ""
authors = ["Mike-gag <t8200234@aueb.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
statsmodels = "^0.14.0"
country-converter = "^1.1.1"
logging = "^0.4.9.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
